# halow-rtos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.cache/clangd/index/: crypto_mbedtls_mm.c.BB1E1DDBA0635470.idx  hostap_morse_common.h.BE3B88C7F865AF22.idx  mm_app_regdb.c.6B28057375080C7B.idx  mm_app_regdb.h.4A29E9165C63B144.idx  mmbuf.c.15BFC80C451A8734.idx  mmbuf.h.C180F7ABDE33328E.idx  mmcrc.c.EF2B9B7E62C826BF.idx  mmcrc.h.18FFB41A590EB150.idx  mmhal.c.1B641EDF8C7C77DC.idx  mmhal.h.FD7BA6D85F1629C5.idx  mmhal_flash.h.BF05A991990F1A3E.idx  mmhal_wlan.h.4D12BAB62066B4D0.idx  mmhal_wlan_binaries.c.CE96DCA4D1DF0E62.idx  mmipal.h.4F4CBF7A5FD63A64.idx  mmipal_lwip.c.915AE0DBB9AB0D45.idx  mmnetif.c.55EC2F8D4231F238.idx  mmnetif.h.C3118CC8DF4B1EAF.idx  mmosal.h.9098AFF71ACF14FF.idx  mmosal_shim_freertos_esp32.c.356E68361514FF75.idx  mmpkt.h.7F7DC05E94D70528.idx  mmpkt_list.h.497A38D0EBFF6074.idx  mmpktmem_heap.c.86D5942CEB7B2272.idx  mmport.h.17A5AF9997B7EAE3.idx  mmutils.h.15CE41B3AF74B88A.idx  mmwlan.h.00D85A53292E700B.idx  ota_test.c.F93591150E220470.idx  ota_test.h.94177D129835D91D.idx  task_gpio.c.B425EDFD49B30155.idx  task_gpio.h.63D85CEE29A545E1.idx  task_halow.c.A9020DF364C3AEDC.idx  task_halow.h.5529B89DDC506A9B.idx  task_login.c.DE946E6AB9DA7901.idx  task_login.h.61A4A52B60BAAC86.idx  task_main.c.099F2F205D277A4F.idx  task_tool.c.29661C7F1BC42512.idx  task_tool.h.9F7F3F02553213F7.idx  wlan_hal.c.7FD37B5E930B4803.idx
main/: CMakeLists.txt  Kconfig.projbuild  config_manager.h  idf_component.yml  mm_app_regdb.c  mm_app_regdb.h  ota_manager.h  ota_test.c  ota_test.h  task_gpio.c  task_gpio.h  task_halow.c  task_halow.h  task_login.c  task_login.h  task_main.c  task_tool.c  task_tool.h
